--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "author": "Jensen Liu",
   "license": "ISC",
-  "dependencies": {
+  "devDependencies": {
     "webpack": "^5.93.0",
     "webpack-cli": "^5.1.4"
   }
