--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Plugins and packages for Doit, an online to-do list website.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npx webpack",
+    "dev": "npx webpack --config webpack.dev.config.js"
   },
   "author": "Jensen Liu",
   "license": "ISC",
