--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx webpack",
+    "build": "npx webpack --config webpack.production.config.js",
     "dev": "npx webpack --config webpack.dev.config.js"
   },
   "author": "Jensen Liu",
