--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx webpack --config webpack.production.config.js",
     "dev": "npx webpack --config webpack.dev.config.js",
-    "dev-sev": "npx webpack serve --config webpack.dev.config.js"
+    "start": "npx webpack serve --open --config webpack.dev.config.js"
   },
   "author": "Jensen Liu",
   "license": "ISC",
